Updating deprecated code